feat: add GetById functionality for categories; implement handler, use case, and repository methods
